pgadmin/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: pgadmin
